--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ body {
   border-right: 25px solid transparent;
   border-bottom: 25px solid black;
 }
+
+#hint {
+  position: fixed;
+  bottom: 15px;
+  left: 50%;
+  width: 400px;
+  margin-left: -200px;
+}
