--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
-    transition: all 0.1s ease;
+    transition: transform 0.1s ease;
     transform: translateX(-1px);
     /* initial position */
 }
@@ -103,8 +103,8 @@ body {
 #editor {
     position: fixed;
     top: 0;
-    right: -750px;
-    width: 800px;
+    right: -850px;
+    width: 900px;
     height: 100%;
     border-left: 1px solid black;
     background-color: #222;
