--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ body {
 
 #editor>.transition-table-wrapper {
     max-width: 100%;
-    padding: 0 auto;
+    padding: 0;
     margin: 100px 0 0;
     text-align: center;
 }
